add PATCH and DELETE handlers
